--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ section {
   transition: ease 0.3s all;
 }
 
-.navbar__menu .menu__link:active {
+.active-link {
   background: rgb(136, 203, 171);
   color: #000;
 }
