--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,17 @@ section {
   transition: ease 0.3s all;
 }
 
+#navbar__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sections-container {
+  display: flex;
+  /* Additional styling for the container if needed */
+}
+
 .active-link {
   background: rgb(136, 203, 171);
   color: #000;
@@ -227,4 +238,49 @@ section.your-active-class .landing__container::after {
   to {
     transform: rotate(360deg) translate(-1em) rotate(-360deg);
   }
+}
+
+/* Responsive Navbar menu */
+.navbar__menu {
+  display: flex;
+  justify-content: flex-end; /* Align items to the right */
+  /* Add other styles for .navbar__menu as needed */
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .hamburger {
+    display: block;
+  }
+
+  .navbar__menu ul {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 70%;
+    height: 100vh;
+    background: rgba(0, 13, 60, 1);
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    padding-top: 3rem;
+    transition: right 0.3s ease;
+  }
+
+  .navbar__menu li {
+    display: block;
+    text-align: left;
+  }
+
+  .navbar__menu .menu__link {
+    padding: 1em;
+  }
+}
+
+.navbar__menu ul.active {
+  right: 0;
 }
