--- a/css/styles.css
+++ b/css/styles.css
@@ -241,10 +241,9 @@ section.your-active-class .landing__container::after {
 }
 
 /* Responsive Navbar menu */
-.navbar__menu {
+.navbar__list {
   display: flex;
-  justify-content: flex-end; /* Align items to the right */
-  /* Add other styles for .navbar__menu as needed */
+  justify-content: flex-end;
 }
 
 .hamburger {
@@ -254,7 +253,11 @@ section.your-active-class .landing__container::after {
 
 @media screen and (max-width: 768px) {
   .hamburger {
-    display: block;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 1em;
+    font-size: 1.5em;
   }
 
   .navbar__menu ul {
@@ -262,8 +265,8 @@ section.your-active-class .landing__container::after {
     top: 0;
     right: -100%;
     width: 70%;
-    height: 100vh;
-    background: rgba(0, 13, 60, 1);
+    height: 150px;
+    background: rgba(0, 13, 60, 0.872);
     flex-direction: column;
     align-items: flex-start;
     justify-content: start;
@@ -279,8 +282,56 @@ section.your-active-class .landing__container::after {
   .navbar__menu .menu__link {
     padding: 1em;
   }
+
+  .navbar__menu ul.active {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 450px;
+    padding: 50px 0;
+    box-sizing: border-box;
+  }
+
+  .navbar__menu ul.active li {
+    display: block;
+    text-align: center;
+    width: 100%;
+    margin: 10px 0;
+  }
+
+  .navbar__menu ul.active li a {
+    display: block;
+    width: 100%;
+  }
+
+  .sections-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .close-sidebar {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50%;
+  }
 }
 
 .navbar__menu ul.active {
   right: 0;
+}
+
+@media screen and (min-width: 769px){
+.close-sidebar {
+  display: none;
+}
 }
