--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ section.your-active-class .landing__container::after {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin: 1em;
+    margin: .5em;
     font-size: 1.5em;
   }
 
@@ -270,7 +270,7 @@ section.your-active-class .landing__container::after {
     flex-direction: column;
     align-items: flex-start;
     justify-content: start;
-    padding-top: 3rem;
+    padding-top: 2rem;
     transition: right 0.3s ease;
   }
 
