--- a/css/styles.css
+++ b/css/styles.css
@@ -110,10 +110,25 @@ section {
   background: rgba(0, 13, 60, 1) 100%;
   padding: 3em;
   color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .page__footer p {
   color: #fff;
+}
+
+.back__top {
+  font-size: 2em;
+  color: transparent;
+  text-shadow: 0 0 0 rgb(136, 203, 171);
+  cursor: pointer;
+  transition: ease 0.3s all;
+}
+
+.back__top:hover {
+  transform: scale(1.2);
 }
 
 /* ---- Theme Rules ---- */
